--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </HEAD>
 </HTML>
 <BODY>
-	
+	<!--=========================================== Part of navigation meanu ================================ -->
 	<NAV>
 	  <DIV class="logo">
         <H1>Coding World</H1>
@@ -14,22 +14,22 @@
 	  <UL>
 	    <LI><A href="#" class="active">Home</A></LI>
 		<LI><A href="#">About</A></LI>
-		<LI><A href="#">Course</A>
-		     <!--<UL class="dropdown">
-			  <LI><A href="#">Web Devlopment</A></LI>
-			  <LI><A href="#">C Programming</A></LI>
-			  <LI><A href="#">JAVA Programming</A></LI>
-			 </UL>--> </LI>
-		<LI><A href="#">User</A>
-			<!-- <UL class="dropdown">
-			  <LI><A href="#">Register</A></LI>
-			  <LI><A href="#">Login</A></LI>
-			 </UL>--></LI>
+		<LI><A href="#">Course</A></LI>
+		<LI><A href="#">User</A></LI>
 	  </UL>
-	 <!-- <div>
-	  <i class="fa-solid fa-bars"> </i>
-	  </div>-->
 	</NAV>
-	<SCRIPT src="practice.js"> </SCRIPT>
+
+<!--========================================================= Part of laptop_image ==================================================-->		
+	
+<DIV class="banner_image">
+        <img src="Web.jpeg" class="laptop_image" alt="laptop_image_banner">
+	<DIV class="center_text">
+	    <H1>Learn Code First</H1>
+		<P>Coding World simplifies coding for everyone offering easy <br>
+		 to follow tutorial ans resources to master programming effortlessly. <br>
+		 start your coding journey with us.
+		</P>
+	</DIV>	
+</DIV>
 	
 </BODY>
