--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!--=========================================== Part of navigation meanu ================================ -->
 	<NAV>
 	  <DIV class="logo">
-        <H1>Coding World</H1>
+        <H1>Coding <FONT color="cyan">World</FONT></H1>
 	  </DIV>
 	  <UL>
 	    <LI><A href="#" class="active">Home</A></LI>
