--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <LINK rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </HEAD>
-</HTML>
 <BODY>
 	<!--=========================================== Part of navigation meanu ================================ -->
 	<NAV>
@@ -31,5 +30,7 @@
 		</P>
 	</DIV>	
 </DIV>
+	cggghjj
 	
 </BODY>
+</HTML>
