--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<DIV class="center_text">
 	    <H1>Learn Code First</H1>
 		<P>Coding World simplifies coding for everyone offering easy <br>
-		 to follow tutorial ans resources to master programming effortlessly. <br>
+		 to follow tutorial and resources to master programming effortlessly <br>
 		 start your coding journey with us.
 		</P>
 	</DIV>	
