--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 <DIV class="banner_image">
         <img src="Web.jpeg" class="laptop_image" alt="laptop_image_banner">
 	<DIV class="center_text">
+	   <DIV class="typing">	
 	    <H1>Learn Code First</H1>
+	   </DIV>		   
 		<P>Coding World simplifies coding for everyone offering easy <br>
 		 to follow tutorial and resources to master programming effortlessly <br>
 		 start your coding journey with us.
