--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img src="Web.jpeg" class="laptop_image" alt="laptop_image_banner">
 	<DIV class="center_text">
 	   <DIV class="typing">	
-	    <H1>Learn Code First</H1>
+	    <H1>....Welcome to Coding World....</H1>
 	   </DIV>		   
 		<P>Coding World simplifies coding for everyone offering easy <br>
 		 to follow tutorial and resources to master programming effortlessly <br>
