--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	  </DIV>
 	  <UL>
 	    <LI><A href="#" class="active">Home</A></LI>
-		<LI><A href="#">About</A></LI>
+		<LI><A href="#">About us</A></LI>
 		<LI><A href="#">Course</A></LI>
 		<LI><A href="#">User</A></LI>
 	  </UL>
