--- a/index.html
+++ b/index.html
@@ -32,6 +32,21 @@
 		</P>
 	</DIV>	
 </DIV>
+
+	<!-- ========================================================= Part of Our Mission ================================================== -->
+
+  <FONT color="rgb(5,250,5)"> <B> <P class="welcome">  Our Mission  </B> </P> </FONT>
+  <P class="message"> At Coding World, our mission is simple: <B>Learn Code First.</B> We belive that anyone can master the art of coding with the right 
+   guidance and resources. Whether your'e a beginner taking your first steps or an enthusiast eager to level up your skills,you've come to the right place.
+   
+   Our platform is designed to make coding accessible,engaging and effective for students of all levels. with easy-to-follow tutorials, practical examples
+   and hands-on projects, you'll not only learn to code but also build the confidence to create.
+   
+   Join our vibrant community of learnners and turn your coding dreams into reality. At Coding World learning is fun,growth is constant and success is within
+   reach.Let's embark on this exciting journey together.
+   
+   Start learning today and see how far you can go!   
+  </P>  	
 	
 	
 </BODY>
