--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
 		 start your coding journey with us.
 		</P>
 	</DIV>	
+</DIV><BR><BR>
+ 
+        <!-- ========================================================= Part of logo ======================================================= -->
+<DIV class="Website_logo">
+
+<DIV class="L">
+<img src="C:\Users\user\Pictures\L.jpg" class="web_logo">
 </DIV>
+
+</DIV> 
 
 	<!-- ========================================================= Part of Our Mission ================================================== -->
 
