--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <DIV class="Website_logo">
 
 <DIV class="L">
-<img src="C:\Users\user\Pictures\L.jpg" class="web_logo">
+<img src="L.jpg" ALT="Logo" class="web_logo">
 </DIV>
 
 </DIV> 
