--- a/index.html
+++ b/index.html
@@ -55,7 +55,25 @@
    reach.Let's embark on this exciting journey together.
    
    Start learning today and see how far you can go!   
-  </P>  	
+  </P>  
+
+	 <!-- =========================================================== Part of our course ================================================== -->
+	
+	<FONT color="rgb(5,250,5)"> <B> <P class="courses">  Courses  </B> </P> </FONT>
+
+<DIV class="course">
+
+  <DIV class="course_name">
+    <a href="#"> <P class="c"> Web Devlopment </P> </a>
+  </DIV>
+  <DIV class="course_name">
+	<a href="#"> <P class="c"> C Programming </P> </a>
+  </DIV>
+  <DIV class="course_name">
+    <a href="#"> <P class="c"> JAVA programming </P> </a>
+  </DIV>
+
+</DIV> <!-- End course div -->	
 	
 	
 </BODY>
