--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <DIV class="course">
 
   <DIV class="course_name">
-    <a href="#"> <P class="c"> Web Devlopment </P> </a>
+    <a href="#"> <P class="c"> Web Development </P> </a>
   </DIV>
   <DIV class="course_name">
 	<a href="#"> <P class="c"> C Programming </P> </a>
