--- a/index.html
+++ b/index.html
@@ -59,21 +59,27 @@
 
 	 <!-- =========================================================== Part of our course ================================================== -->
 	
-	<FONT color="rgb(5,250,5)"> <B> <P class="courses">  Courses  </B> </P> </FONT>
 
-<DIV class="course">
+	<FONT color="rgb(5,250,5)"> <B> <P class="welcome">  Courses  </B> </P> </FONT>
+	
+<DIV class="course_container">
 
-  <DIV class="course_name">
-    <a href="#"> <P class="c"> Web Development </P> </a>
-  </DIV>
-  <DIV class="course_name">
-	<a href="#"> <P class="c"> C Programming </P> </a>
-  </DIV>
-  <DIV class="course_name">
-    <a href="#"> <P class="c"> JAVA programming </P> </a>
-  </DIV>
+   <DIV class="image_box">
+   <IMG src="C:\Users\user\Pictures\W.jpeg" alt="Web" class="image">
+   <A href="#"> <DIV class="overlay"> Web Development </DIV> </A>
+   </DIV>
+   
+   <DIV class="image_box">
+   <IMG src="C:\Users\user\Pictures\C.png" alt="Web" class="image">
+    <A href="#"> <DIV class="overlay"> C Programming </DIV> </A>
+   </DIV>
 
-</DIV> <!-- End course div -->	
+   <DIV class="image_box">
+   <IMG src="C:\Users\user\Pictures\J.jpeg" alt="Web" class="image">
+   <A href="#"> <DIV class="overlay"> JAVA Programming </DIV> </A>
+   </DIV>
+
+</DIV>		
 	
 	
 </BODY>
