--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
 <DIV class="course_container">
 
    <DIV class="image_box">
-   <IMG src="C:\Users\user\Pictures\W.jpeg" alt="Web" class="image">
+   <IMG src="W.jpeg" alt="Web" class="image">
    <A href="#"> <DIV class="overlay"> Web Development </DIV> </A>
    </DIV>
    
    <DIV class="image_box">
-   <IMG src="C:\Users\user\Pictures\C.png" alt="Web" class="image">
+   <IMG src="C.png" alt="Web" class="image">
     <A href="#"> <DIV class="overlay"> C Programming </DIV> </A>
    </DIV>
 
    <DIV class="image_box">
-   <IMG src="C:\Users\user\Pictures\J.jpeg" alt="Web" class="image">
+   <IMG src="J.jpeg" alt="Web" class="image">
    <A href="#"> <DIV class="overlay"> JAVA Programming </DIV> </A>
    </DIV>
 
