--- a/index.html
+++ b/index.html
@@ -65,22 +65,21 @@
 <DIV class="course_container">
 
    <DIV class="image_box">
-   <IMG src="W.jpeg" alt="Web" class="image">
-   <A href="#"> <DIV class="overlay"> Web Development </DIV> </A>
+   <IMG src="W.jpeg" alt="Web" class="image" width="210px" height="70%">
+   <a href="#"> <p align="center"> Web Development  </p> </a>
    </DIV>
    
    <DIV class="image_box">
-   <IMG src="C.png" alt="Web" class="image">
-    <A href="#"> <DIV class="overlay"> C Programming </DIV> </A>
+   <IMG src="C.png" alt="Web" class="image" width="210px" height="70%">
+    <a href="#"> <p align="center"> C Programming </p> </a>
    </DIV>
 
    <DIV class="image_box">
-   <IMG src="J.jpeg" alt="Web" class="image">
-   <A href="#"> <DIV class="overlay"> JAVA Programming </DIV> </A>
+   <IMG src="J.jpeg" alt="Web" class="image" width="210px" height="70%">
+   <a href="#"> <p align="center"> JAVA Programming  </p> </a>
    </DIV>
 
-</DIV>		
-	
+</DIV>
 	
 </BODY>
 </HTML>
