--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@
 <DIV class="course_container">
 
    <DIV class="image_box">
-   <IMG src="W.jpeg" alt="Web" class="image" width="210px" height="70%">
-   <a href="#"> <p align="center"> Web Development  </p> </a>
+   <a href="#"> <IMG src="W.jpeg" alt="Web" class="image" width="210px" height="70%">
+                 <p align="center"> Web Development  </p> </a>
    </DIV>
    
    <DIV class="image_box">
-   <IMG src="C.png" alt="Web" class="image" width="210px" height="70%">
-    <a href="#"> <p align="center"> C Programming </p> </a>
+  <a href="#"> <IMG src="C.png" alt="Web" class="image" width="210px" height="70%">
+               <p align="center"> C Programming </p> </a>
    </DIV>
 
    <DIV class="image_box">
-   <IMG src="J.jpeg" alt="Web" class="image" width="210px" height="70%">
-   <a href="#"> <p align="center"> JAVA Programming  </p> </a>
+  <a href="#"> <IMG src="J.jpeg" alt="Web" class="image" width="210px" height="70%">
+               <p align="center"> JAVA Programming  </p> </a>
    </DIV>
 
 </DIV>
