--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	  <UL>
 	    <LI><A href="#" class="active">Home</A></LI>
 		<LI><A href="#">About us</A></LI>
-		<LI><A href="#">Project & Assignment</A></LI>
+		<LI><A href="#">Projects & Assignment</A></LI>
 		<LI><A href="#">User</A></LI>
 	  </UL>
 	</NAV>
