--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <DIV class="course_container">
 
    <DIV class="image_box">
-   <a href="#"> <IMG src="W.jpeg" alt="Web" class="image" width="210px" height="70%">
+   <a href="W.jpeg"> <IMG src="W.jpeg" alt="Web" class="image" width="210px" height="70%">
                  <p align="center"> Web Development  </p> </a>
    </DIV>
    
