--- a/index.html
+++ b/index.html
@@ -80,6 +80,19 @@
    </DIV>
 
 </DIV>
+
+	 <!-- ========================================================= Part of E-book ==================================================== -->
+   
+   <FONT color="rgb(5,250,5)"> <B> <P class="welcome">  E-book  </B> </P> </FONT>
+  
+<DIV class="book_container">
+
+	<a href="#"> <INPUT type="button" value="e - book for Web Development" class="e_book_button"> </a>
+	<a href="#"> <INPUT type="button" value="e - book for C Programming" class="e_book_button"> </a>
+	<a href="#"> <INPUT type="button" value="e - book for JAVA Programming" class="e_book_button"> </a>
+
+</DIV>  
+	
 	
 </BODY>
 </HTML>
