--- a/index.html
+++ b/index.html
@@ -92,6 +92,55 @@
 	<a href="#"> <INPUT type="button" value="e - book for JAVA Programming" class="e_book_button"> </a>
 
 </DIV>  
+
+	<!--=========================================== Part of footer section ========================================= -->
+
+<footer>
+
+  <DIV class="footer_container">
+	
+	<DIV class="footer_scetion">
+	  <img src="L.jpg" class="footer_logo">
+	</DIV>
+	
+	<DIV class="footer_scetion">
+		<H2> Contact </H2>
+		<SPAN class="divider"> </SPAN> 
+		
+		<DIV class="i">
+		 <i class="fa-solid fa-phone"></i>
+		 <h5>&nbsp; 95474 37329</h5>
+		</DIV>
+		
+		<DIV class="i">
+		 <i class="fa-solid fa-envelope"></i>
+		 <h5>&nbsp; bikramhaldar608@gmail.com</h5>
+		</DIV>
+
+	</DIV>
+	
+	<DIV class="footer_scetion">
+		<H2> Follow us </H2>
+		<SPAN class="divider"> </SPAN>
+		<DIV class="icon">
+		    <a href="#"> <i class="fa-brands fa-facebook"> </i> </a>
+			<a href="#"> <i class="fa-brands fa-youtube"> </i> </a>
+			<a href="#"> <i class="fa-brands fa-square-instagram"> </i> </a> 
+			<a href="#"> <i class="fa-brands fa-telegram"> </i> </a>
+		</DIV>
+     
+	</DIV>
+
+</DIV> <!-- End footer_container (main container) -->
+
+<br>
+	<div class="devloper_name">
+	    <i class="fa-regular fa-copyright"></i> &nbsp; Created by - Bikram Haldar (2024 - 25) Coding World
+	</div>
+</footer>
+
+					
+  
 	
 	
 </BODY>
