--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
 		<H2> Follow us </H2>
 		<SPAN class="divider"> </SPAN>
 		<DIV class="icon">
-		    <a href="#"> <i class="fa-brands fa-facebook"> </i> </a>
-			<a href="#"> <i class="fa-brands fa-youtube"> </i> </a>
-			<a href="#"> <i class="fa-brands fa-square-instagram"> </i> </a> 
-			<a href="#"> <i class="fa-brands fa-telegram"> </i> </a>
+		        <a href="#"> <font color="black"> <i class="fa-brands fa-facebook"> </i> </a>  </font> 
+			<a href="#"> <font color="black"> <i class="fa-brands fa-youtube"> </i> </a>  </font> 
+			<a href="#"> <font color="black"> <i class="fa-brands fa-square-instagram"> </i> </a>  </font> 
+			<a href="#"> <font color="black"> <i class="fa-brands fa-telegram"> </i> </a>  </font> 
 		</DIV>
      
 	</DIV>
