--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <H1>Coding <FONT color="cyan">World</FONT></H1>
 	  </DIV>
 	  <UL>
-	    <LI><A href="#" class="active">Home</A></LI>
-		<LI><A href="#">About us</A></LI>
+	    <LI><A href="index.html" class="active">Home</A></LI>
+		<LI><A href="about.html">About us</A></LI>
 		<LI><A href="#">Projects & Assignment</A></LI>
 		<LI><A href="#">User</A></LI>
 	  </UL>
