--- a/about.html
+++ b/about.html
@@ -22,6 +22,75 @@
 
 		<!-- ============================================== Part of about message =================================================== -->
 		
+<DIV class="about">
+
+<DIV class="L">
+<img src="C:\Users\user\Pictures\L.jpg" class="web_logo">
+<SPAN class="divider"> </SPAN>
+<FONT color="rgb(5,250,5)"> <B> <P class="heading">  About Coding World  </B> </P> </FONT>
+</DIV>
+
+</DIV>
+
+<DIV class="message">
+
+ <P class="message" align="justify"> Welcome to Coding World we are your ultimate destination for mastering the art of coding in a fast, efficient, and 
+  easy-to-understand way. At Coding World, we belive that learning to code shouldn't be intimidating or overly complicated. Our mission is to make 
+  programming accessible to everyone,regardless of age,experience or background. Whether you're a complete beginner or looking to sharpen your existing
+  skills, we have something tailored just for you. Our platform offers a wide range of resources, including step-by-step tutorials, hands-on coding
+  excercises, and expert guidance. We focus on breaking down complex concepts into simple, digestible lessons, enabling you to learn quickly and confidently.
+  We cover a variety of technologies, our team of passionate developers and educators is dedicated to keeping our content up-to-date with industry trends
+  and best practices. With our personalized approach and supportive environment, you'll not only learn to code but also develop problem-solving skills that
+  will empower you in the digital age. Join us on this exciting journey and transform your coding dreams into reality. Let's make coding simple, fast, and
+  enjoyable-together!</p>
+
+</DIV>
+
+  <!--=========================================== Part of footer section ========================================= -->
+
+<footer>
+
+  <DIV class="footer_container">
+	
+	<DIV class="footer_scetion">
+	  <img src="C:\Users\user\Pictures\L.jpg" class="footer_logo">
+	</DIV>
+	
+	<DIV class="footer_scetion">
+		<H2> Contact </H2>
+		<SPAN class="divide"> </SPAN> 
+		
+		<DIV class="i">
+		 <i class="fa-solid fa-phone"></i>
+		 <h5>&nbsp; 95474 37329</h5>
+		</DIV>
+		
+		<DIV class="i">
+		 <i class="fa-solid fa-envelope"></i>
+		 <h5>&nbsp; bikramhaldar608@gmail.com</h5>
+		</DIV>
+
+	</DIV>
+	
+	<DIV class="footer_scetion">
+		<H2> Follow us </H2>
+		<SPAN class="divide"> </SPAN>
+		<DIV class="icon">
+		    <a href="#"> <font color="black"> <i class="fa-brands fa-facebook"> </i> </a> </font> 
+			<a href="#"> <font color="black"> <i class="fa-brands fa-youtube"> </i> </a> </font>
+			<a href="#"> <font color="black"> <i class="fa-brands fa-square-instagram"> </i> </a> </font>
+			<a href="#"> <font color="black"> <i class="fa-brands fa-telegram"> </i> </a> </font>
+		</DIV>
+     
+	</DIV>
+
+</DIV> <!-- End footer_container (main container) -->
+
+<br>
+	<div class="devloper_name">
+	    <i class="fa-regular fa-copyright"></i> &nbsp; Created by - Bikram Haldar (2024 - 25) Coding World
+	</div>
+</footer>	
 
 </BODY>
 </HTML>
