--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 <DIV class="about">
 
 <DIV class="L">
-<img src="C:\Users\user\Pictures\L.jpg" class="web_logo">
+<img src="L.jpg" class="web_logo">
 <SPAN class="divider"> </SPAN>
 <FONT color="rgb(5,250,5)"> <B> <P class="heading">  About Coding World  </B> </P> </FONT>
 </DIV>
@@ -53,7 +53,7 @@
   <DIV class="footer_container">
 	
 	<DIV class="footer_scetion">
-	  <img src="C:\Users\user\Pictures\L.jpg" class="footer_logo">
+	  <img src="L.jpg" class="footer_logo">
 	</DIV>
 	
 	<DIV class="footer_scetion">
