--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 
 <DIV class="message">
 
- <P class="message" align="justify"> Welcome to Coding World we are your ultimate destination for mastering the art of coding in a fast, efficient, and 
+ <P align="justify"> Welcome to Coding World we are your ultimate destination for mastering the art of coding in a fast, efficient, and 
   easy-to-understand way. At Coding World, we belive that learning to code shouldn't be intimidating or overly complicated. Our mission is to make 
   programming accessible to everyone,regardless of age,experience or background. Whether you're a complete beginner or looking to sharpen your existing
   skills, we have something tailored just for you. Our platform offers a wide range of resources, including step-by-step tutorials, hands-on coding
