--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	  <UL>
 	    <LI><A href="index.html" class="active">Home</A></LI>
 		<LI><A href="about.html">About us</A></LI>
-		<LI><A href="#">Projects & Assignment</A></LI>
+		<LI><A href="project & assignment.html">Projects & Assignment</A></LI>
 		<LI><A href="#">User</A></LI>
 	  </UL>
 	</NAV>
