--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 	  <UL>
 	    <LI><A href="index.html">Home</A></LI>
 		<LI><A href="about.html" class="active">About us</A></LI>
-		<LI><A href="#">Projects & Assignment</A> </LI>
+		<LI><A href="project & assignment.html">Projects & Assignment</A> </LI>
 		<LI><A href="#">User</A></LI>
 	  </UL>
 </NAV>
