--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
  <P align="justify"> Welcome to Coding World we are your ultimate destination for mastering the art of coding in a fast, efficient, and 
   easy-to-understand way. At Coding World, we belive that learning to code shouldn't be intimidating or overly complicated. Our mission is to make 
   programming accessible to everyone,regardless of age,experience or background. Whether you're a complete beginner or looking to sharpen your existing
-  skills, we have something tailored just for you. Our platform offers a wide range of resources, including step-by-step tutorials, hands-on coding
+  skills, we have something tailored just for you. Our platform offers a wide range of resources, step-by-step tutorials, hands-on coding
   excercises, and expert guidance. We focus on breaking down complex concepts into simple, digestible lessons, enabling you to learn quickly and confidently.
   We cover a variety of technologies, our team of passionate developers and educators is dedicated to keeping our content up-to-date with industry trends
   and best practices. With our personalized approach and supportive environment, you'll not only learn to code but also develop problem-solving skills that
