--- a/project & assignment.html
+++ b/project & assignment.html
@@ -21,7 +21,7 @@
 </NAV>
 		<!-- ================================================ Part of table list ====================================================== -->
 		
-<TABLE align="center" cellspacing="4px" cellpadding="8px" width="30%">
+<TABLE align="center" cellspacing="4px" cellpadding="8px">
 
 	<TR>
 	 <TD>
