Update project & assignment.html

--- a/project & assignment.html
+++ b/project & assignment.html
@@ -28,7 +28,7 @@
 	    Project for <b>WEB DEVLOPMENT</b>
 	 </TD>
 	 <TD>
-	    <A href="#" target="_main">Click here</A>
+	    <A href="wpdv project.html" target="_main">Click here</A>
 	 </TD>
 	</TR>
 	
