--- a/wpdv project.html
+++ b/wpdv project.html
@@ -24,7 +24,7 @@
 	   
 <DIV class="back">
 
- <a href="project & Assignment.html"> <i class="fa-solid fa-less-than"></i> Back </a> /
+ <a href="project & assignment.html"> <i class="fa-solid fa-less-than"></i> Back </a> /
  <p class="now">Project for <B>WEB DEVELOPMENT</B> </p>
  
 </DIV>	   
