--- a/wpdv project.html
+++ b/wpdv project.html
@@ -45,7 +45,7 @@
 </FIELDSET>
 <FIELDSET> <LEGEND> HTML Project </LEGEND>
 
-<p class="choose"><font color="red"> &nbsp; Choose any one topic.</font></p>
+<p><font color="red"> &nbsp; Choose any one topic.</font></p>
 <p>i) College Management System.</p>
 <p>ii) Hospital Management System.</p>
 <p>iii) Online shopping Management system.</p>
