Update project & assignment.html

--- a/project & assignment.html
+++ b/project & assignment.html
@@ -37,7 +37,7 @@
 	    Assignment for <b>C PROGRAMMING</b>
 	 </TD>
 	 <TD>
-	    <A href="#" target="_main">Click here</A>
+	    <A href="Assignment c program.html" target="_main">Click here</A>
 	 </TD>
 	</TR>
 	
