Update Assignment c program.html

--- a/Assignment c program.html
+++ b/Assignment c program.html
@@ -24,7 +24,7 @@
 	   
 <DIV class="back">
 
- <a href="project & Assignment.html"> <i class="fa-solid fa-less-than"></i> Back </a> /
+ <a href="project & assignment.html"> <i class="fa-solid fa-less-than"></i> Back </a> /
  <p class="now">Assignment for <B>C PROGRAMMING</B> </p>
  
 </DIV>	   
