Update project & assignment.html

--- a/project & assignment.html
+++ b/project & assignment.html
@@ -46,7 +46,7 @@
 	    Assignment for <b>JAVA PROGRAMMING</b>
 	 </TD>
 	 <TD>
-	    <A href="#" target="_main">Click here</A>
+	    <A href="Assignment java.html" target="_main">Click here</A>
 	 </TD>
 	</TR>
 	
