--- a/Assignment c program.html
+++ b/Assignment c program.html
@@ -1,6 +1,6 @@
 <HTML>
 <HEAD>
-<TITLE> project for WEB DEVELOPMENT </TITLE>
+<TITLE> project for c program </TITLE>
 <LINK rel="stylesheet" href="Assignment c program.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </HEAD>
