Update project & assignment.html

--- a/project & assignment.html
+++ b/project & assignment.html
@@ -16,7 +16,7 @@
 	    <LI><A href="index.html">Home</A></LI>
 		<LI><A href="about.html">About us</A></LI>
 		<LI><A href="project & assignment.html" class="active">Projects & Assignment</A> </LI>
-		<LI><A href="#">User</A></LI>
+		<LI><A href="Register.html">User</A></LI>
 	  </UL>
 </NAV>
 		<!-- ================================================ Part of table list ====================================================== -->
