--- a/Register.html
+++ b/Register.html
@@ -24,7 +24,7 @@
 
 <DIV class="main">
  <DIV class="register">
-    <FORM id="register" method="post">
+    <FORM id="register" method="post" name="google-sheet">
 	 <LABEL><B> Name <font color="red" size="5px">*</font></B></LABEL>
 	 <INPUT type="text" name="name" id="name" placeholder="Enter your name..." required>
 	 
@@ -32,16 +32,29 @@
 	 <INPUT type="text" name="number" id="number" placeholder="Enter mobile number..." required>
 	 
 	 <LABEL><B> Email <font color="red" size="5px">*</font></B></LABEL>
-	 <INPUT type="text" name="name" id="name" placeholder="Enter email id..." required>
+	 <INPUT type="text" name="email" id="name" placeholder="Enter email id..." required>
 	 
 	 <LABEL><B> Course Name <font color="red" size="5px">*</font></B></LABEL>
-	 <INPUT type="text" name="name" id="name" placeholder="Enter course name..." required>
+	 <INPUT type="text" name="course" id="name" placeholder="Enter course name..." required>
 	 
 	 <input type="submit" value="submit" id="submit">
 	
 </FORM> 
  </DIV>
 </DIV>
+
+<script>
+			const scriptURL = 'https://script.google.com/macros/s/AKfycbx-sycT7fw6yrdjYQnMnCTGLV52pKw44ASeMe3Kt6WVRAcyH5nkUhn0hrFebso0xHPZ/exec'
+			const form = document.forms['google-sheet']
+		  
+			form.addEventListener('submit', e => {
+			  e.preventDefault()
+			  fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+				.then(response => alert("Thank you! your form is submitted successfully." ))
+				.then(() => {  window.location.reload(); })
+				.catch(error => console.error('Error!', error.message))
+			})
+		  </script>
 
 </BODY>
 </HTML>
