--- a/Register.html
+++ b/Register.html
@@ -78,6 +78,13 @@
 	
 	</DIV> <!--End register div--> 
  </DIV> <!--End main div-->
+</TABLE>
+ <DIV class="button">
+  <DIV class="submit">
+        <INPUT type="Reset" value="Reset" id="Reset">
+	    <INPUT type="Submit" value="Submit" id="Submit">
+  </DIV>
+ </DIV>
  </FORM> <!--End form-->
 
 			<!--==================================================== Part of java script ================================================-->
