--- a/Register.html
+++ b/Register.html
@@ -68,9 +68,16 @@
 	</TR> <!--End 4th table row-->
 
 	<TR> <!--Start 5th table row-->
+	<TD><B> Course<FONT color="red" size="5px">*</FONT></B></TD>
+	<TD><SELECT name="COURSE" required>
+	        <OPTION>Select</OPTION>
+	        <OPTION name="COURSE" value="Web Development">Web Development</OPTION>
+	        <OPTION name="COURSE" value="C Programming">C Programming</OPTION>
+	        <OPTION name="COURSE" value="JAVA Programming">JAVA Programming</OPTION>
+	    </SELECT></TD>
 	
 	<TD><B> Permanent Address<FONT color="red" size="5px">*</FONT></B></TD>
-		<TD colspan="3"> <TEXTAREA rows="3" cols="70" name="ADDRESS" placeholder="Enter your permanent address..." required></TEXTAREA> </TD>
+		<TD> <TEXTAREA rows="3" cols="23" name="ADDRESS" placeholder="Enter your permanent address..." required></TEXTAREA> </TD>
 	</TR> <!--End 5th table row-->	
 			
 	</DIV> <!--End register div--> 
