--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	    <LI><A href="index.html" class="active">Home</A></LI>
 		<LI><A href="about.html">About us</A></LI>
 		<LI><A href="project & assignment.html">Projects & Assignment</A></LI>
-		<LI><A href="Register.html">User</A></LI>
+		<LI><A href="Register.html">Registration</A></LI>
 	  </UL>
 	</NAV>
 
