--- a/Assignment c program.html
+++ b/Assignment c program.html
@@ -16,7 +16,7 @@
 	    <LI><A href="index.html">Home</A></LI>
 		<LI><A href="about.html">About us</A></LI>
 		<LI><A href="#" class="active">Projects & Assignment</A> </LI>
-		<LI><A href="Register.html">User</A></LI>
+		<LI><A href="Register.html">Registration</A></LI>
 	  </UL>
 </NAV>
 
