--- a/Register.html
+++ b/Register.html
@@ -89,6 +89,9 @@
 	    <INPUT type="Submit" value="Submit" id="Submit">
   </DIV>
  </DIV>
+			
+<DIV class="message"> <FONT color="red"><b>* A student can only apply to one course </b></FONT> </DIV>
+			
  </FORM> <!--End form-->
 
 			<!--==================================================== Part of java script ================================================-->
