--- a/course WPDV.html
+++ b/course WPDV.html
@@ -44,7 +44,7 @@
        <TD> 2024-25</TD>
    </TR>
    <TR><TD><B> Link</B></TD>
-       <TD align="center"> <a href="#"> <BUTTON>APPLY NOW</BUTTON></a></TD>
+       <TD align="center"> <a href="Apply WPDV course.html"> <BUTTON>APPLY NOW</BUTTON></a></TD>
    </TR>
    
 
