--- a/Apply WPDV course.html
+++ b/Apply WPDV course.html
@@ -44,9 +44,9 @@
 	<TR> <!-- Start 2nd table row -->
 	<TD><B> Gender<FONT color="red" size="5px">*</FONT></B></TD>
 	    <TD><SELECT  name="GENDER" required>
-		        <OPTION>Select</OPTION>   
-		        <OPTION name="GENDER" value="Male">Male</OPTION>   
-		        <OPTION name="GENDER" value="Female">Female</OPTION>   
+		        <OPTION required>Select</OPTION>   
+		        <OPTION name="GENDER" value="Male" required>Male</OPTION>   
+		        <OPTION name="GENDER" value="Female" required>Female</OPTION>   
 	    	</SELECT></TD>
 			
 	<TD><B> ID Number<FONT color="red" size="5px">*</B></FONT></TD>
