Update Apply WPDV course.html

--- a/Apply WPDV course.html
+++ b/Apply WPDV course.html
@@ -50,7 +50,7 @@
 	    	</SELECT></TD>
 			
 	<TD><B> ID Number<FONT color="red" size="5px">*</B></FONT></TD>
-	    <TD><INPUT type="text" name="ID NUMBER" placeholder="Enter your ID ..." required>		
+	    <TD><INPUT type="text" name="ID NUMBER" placeholder="Enter your reg. ID ..." required>		
 	
 	</TR> <!-- End 2nd table row -->
 	
