--- a/Register.html
+++ b/Register.html
@@ -22,7 +22,7 @@
 <!--===================================================== Part registration form ============================================-->
  <DIV class="main">
     <DIV class="register">
-	<FORM id="register" method="post" name="google-sheet">
+	<FORM onsubmit="data()" id="register" method="post" name="google-sheet">
 	
 	<TABLE border="0px" cellspacing="4px" cellpadding="3px">
 	
@@ -56,7 +56,7 @@
 		    </SELECT></TD>
 			
 	<TD><B> Contact Number<FONT color="red" size="5px">*</FONT></B></TD>
-         <TD><INPUT type="text" name="CONTACT NUMBER" placeholder="Enter contact number..." required></TD>	
+         <TD><INPUT type="text" name="CONTACT NUMBER" placeholder="Enter contact number..." id="n6" required></TD>	
 	</TR> <!--End 3rd table row-->
 	
 	<TR> <!--Start 4th table row-->
@@ -92,6 +92,28 @@
  <DIV class="message"> <FONT color="red"><b>* A student can only apply to one course </b></FONT> </DIV>
 
  </FORM> <!--End form-->
+
+<!--==================================================== Part of java script for form validation ===========================================-->
+<script>
+function data()
+{
+   var f=document.getElementById("n6").value;
+   
+   if(f.length<10||f.length>10)
+   {
+     alert("Contact Number should be of 10 digits! Please enter valid number");
+   }
+   else if(isNaN(f))
+   {
+     alert("Only Numbers are allowed! Please enter valid number");
+	 return false;
+   }
+   else
+   {
+     true;
+   }
+}
+</script>  			
 
 			<!--==================================================== Part of java script ================================================-->
 		   
