--- a/Register.html
+++ b/Register.html
@@ -75,7 +75,7 @@
 
 	<TR> <!--Start 5th table row-->
 	<TD><B> Permanent Address<FONT color="red" size="5px">*</FONT></B></TD>
-		<TD colspan="3"> <TEXTAREA rows="5" cols="72" name="ADDRESS" placeholder="Enter your permanent address...e.g - { Vill / P.O / P.S / STATE / DIST / PIN CODE }" required> </TEXTAREA> </TD>
+		<TD colspan="3"> <TEXTAREA rows="5" cols="72" name="ADDRESS" placeholder="Enter your permanent address..." required> </TEXTAREA> </TD>
 	</TR> <!--End 5th table row-->	
 	
 	</DIV> <!--End register div--> 
