Update Apply WPDV course.html

--- a/Apply WPDV course.html
+++ b/Apply WPDV course.html
@@ -44,7 +44,7 @@
 	<TR> <!-- Start 2nd table row -->
 	<TD><B> Gender<FONT color="red" size="5px">*</FONT></B></TD>
 	    <TD><SELECT  name="GENDER" required>
-		        <OPTION required>Select</OPTION>   
+		        <OPTION value="">--- Select ---</OPTION>   
 		        <OPTION name="GENDER" value="Male" required>Male</OPTION>   
 		        <OPTION name="GENDER" value="Female" required>Female</OPTION>   
 	    	</SELECT></TD>
