--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
    </DIV>
    
    <DIV class="image_box">
-  <a href="#"> <IMG src="C.png" alt="Web" class="image" width="210px" height="70%">
+  <a href="Course c program.html"> <IMG src="C.png" alt="Web" class="image" width="210px" height="70%">
                <p align="center"> C Programming </p> </a>
    </DIV>
 
