--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
    </DIV>
 
    <DIV class="image_box">
-  <a href="#"> <IMG src="J.jpeg" alt="Web" class="image" width="210px" height="70%">
+  <a href="Course Java.html"> <IMG src="J.jpeg" alt="Web" class="image" width="210px" height="70%">
                <p align="center"> JAVA Programming  </p> </a>
    </DIV>
 
