--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -12,7 +12,7 @@ Welcome to coding world book store </FONT> </MARQUEE>
 <DIV class="container">
 
   <DIV class="book">
-	<img src="C:\Users\user\OneDrive\Pictures\Screenshots\cov1.png">	
+	<img src="cov1.png">	
 	<div> <p><b><font color="black"> HTML, CSS, Java Script </b></p> 
 	<p>Credit to infosys</p> </font></div>
   </DIV> <!--End book div --> 
