--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -23,6 +23,18 @@ Welcome to coding world book store </FONT> </MARQUEE>
 	<p>Credit to infosys</p> </font></div>
   </DIV> <!--End book div --> 
 
+ <DIV class="book">
+	<img src="C:\Users\user\OneDrive\Pictures\Screenshots\cov1.png">	
+	<div> <p><b><font color="black"> HTML, CSS, Java Script </b></p> 
+	<p>Credit to infosys</p> </font></div>
+  </DIV> <!--End book div --> 	
+
+ <DIV class="book">
+	<img src="C:\Users\user\OneDrive\Pictures\Screenshots\cov1.png">	
+	<div> <p><b><font color="black"> HTML, CSS, Java Script </b></p> 
+	<p>Credit to infosys</p> </font></div>
+  </DIV> <!--End book div --> 	
+
 </DIV> <!--End container div -->
 
 </BODY>
