--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -2,6 +2,7 @@
 <HEAD>
 <TITLE> Book store </TITLE>
 <LINK rel="stylesheet" href="wpdvbook.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </HEAD>
 <BODY>
 <!-- ================================================================ Part of marquee tag ======================================== --> 
@@ -13,27 +14,29 @@ Welcome to coding world book store </FONT> </MARQUEE>
 
   <DIV class="book">
 	<img src="cov1.png">	
-	<div> <p><b><font color="black"> HTML, CSS, Java Script </b></p> 
-	<p>Credit to infosys</p> </font></div>
+	<div> <p><b><font color="white"> HTML, CSS, Java Script </b></p> 
+	<p>Credit to infosys, <i class="fa-sharp fa-solid fa-star" style="color: #FFD43B;"></i> 
+	<i class="fa-sharp fa-solid fa-star" style="color: #FFD43B;"></i> </p> </font> <p>File type - .pdf / 830.65KB</p> <p> Page - 144</p> 
+	<a href="wpdv1.pdf"><BUTTON><i class="fa-solid fa-download"></i><b>Download File</b></BUTTON> </a></div>
   </DIV> <!--End book div --> 
   
   <DIV class="book">
 	<img src="cov1.png">	
-	<div> <p><b><font color="black"> HTML, CSS, Java Script </b></p> 
-	<p>Credit to infosys</p> </font></div>
+	<div> <p><b><font color="white"> HTML, CSS, Java Script </b></p> 
+	<p>Credit to infosys, 2025</p> </font></div>
   </DIV> <!--End book div --> 
-
- <DIV class="book">
+  
+  <DIV class="book">
 	<img src="cov1.png">	
-	<div> <p><b><font color="black"> HTML, CSS, Java Script </b></p> 
-	<p>Credit to infosys</p> </font></div>
-  </DIV> <!--End book div --> 	
-
- <DIV class="book">
+	<div> <p><b><font color="white"> HTML, CSS, Java Script </b></p> 
+	<p>Credit to infosys, 2025</p> </font></div>
+  </DIV> <!--End book div --> 
+  
+  <DIV class="book">
 	<img src="cov1.png">	
-	<div> <p><b><font color="black"> HTML, CSS, Java Script </b></p> 
-	<p>Credit to infosys</p> </font></div>
-  </DIV> <!--End book div --> 	
+	<div> <p><b><font color="white"> HTML, CSS, Java Script </b></p> 
+	<p>Credit to infosys, 2025</p> </font></div>
+  </DIV> <!--End book div --> 
 
 </DIV> <!--End container div -->
 
