--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -16,7 +16,7 @@ Welcome to coding world book store </FONT> </MARQUEE>
 	<img src="cov1.png">	
 	<div> <p><b><font color="white"> HTML, CSS, Java Script </b></p> 
 	<p>Credit to infosys, <i class="fa-sharp fa-solid fa-star" style="color: #FFD43B;"></i> 
-	<i class="fa-sharp fa-solid fa-star" style="color: #FFD43B;"></i> </p> </font> <p>File type - .pdf / 830.65KB</p> <p> Page - 144</p> 
+	<i class="fa-sharp fa-solid fa-star" style="color: #FFD43B;"></i> </p> </font> <p>File type - .pdf</p> <p> Page - 144 / 811.18KB</p> 
 	<a href="wpdv1.pdf"><BUTTON><i class="fa-solid fa-download"></i><b>Download File</b></BUTTON> </a></div>
   </DIV> <!--End book div --> 
   
