--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -17,7 +17,7 @@ Welcome to coding world book store </FONT> </MARQUEE>
 	<div> <p><b><font color="white"> HTML, CSS, Java Script </b></p> 
 	<p>Credit to infosys, <i class="fa-sharp fa-solid fa-star" style="color: #FFD43B;"></i> 
 	<i class="fa-sharp fa-solid fa-star" style="color: #FFD43B;"></i> </p> </font> <p>File type - .pdf</p> <p> Page - 144 / 811.18KB</p> 
-	<a href="wpdv1.pdf"><BUTTON><i class="fa-solid fa-download"></i><b>Download File</b></BUTTON> </a></div>
+	<a href="wpdv1.pdf" download="Coding World wpdv"><BUTTON><i class="fa-solid fa-download"></i><b>Download File</b></BUTTON> </a></div>
   </DIV> <!--End book div --> 
   
   <DIV class="book">
