--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -5,6 +5,14 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </HEAD>
 <BODY>
+<!-- ================================================================ Part of close option ====================================== -->
+<div class="main_close">
+ 
+ <div class="close">
+	<a href="index.html"><i class="fa-solid fa-xmark"></i></a>
+ </div> <!--End close div-->
+
+</div> <!--End main_close div-->
 <!-- ================================================================ Part of marquee tag ======================================== --> 
 <MARQUEE bgcolor="BLACK" direction="left" onmouseover="this.stop();" onmouseout="this.start();" scrollamount="5"> <FONT color="white"> 
 Welcome to coding world book store </FONT> </MARQUEE>
@@ -14,10 +22,13 @@ Welcome to coding world book store </FONT> </MARQUEE>
 
   <DIV class="book">
 	<img src="cov1.png">	
-	<div> <p><b><font color="white"> HTML, CSS, Java Script </b></p> 
-	<p>Credit to infosys, <i class="fa-sharp fa-solid fa-star" style="color: #FFD43B;"></i> 
-	<i class="fa-sharp fa-solid fa-star" style="color: #FFD43B;"></i> </p> </font> <p>File type - .pdf</p> <p> Page - 144 / 811.18KB</p> 
-	<a href="wpdv1.pdf" download="Coding World wpdv"><BUTTON><i class="fa-solid fa-download"></i><b>Download File</b></BUTTON> </a></div>
+	<div> 
+	<P><i class="fa-sharp fa-solid fa-star" style="color:#FFD43B;"></i><i class="fa-sharp fa-solid fa-star" style="color:#FFD43B;"></i></P>
+	<BR><p><b><font color="white"> HTML, CSS, Java Script </b></p> 
+	<p>Credit to infosys
+    </p> </font> <p>File type - .pdf / 811.18KB </p> <p> Page - 144</p> 
+	<a href="wpdv1.pdf" class="a" download="Coding World wpdv"><BUTTON><i class="fa-solid fa-download"></i><b>Download File</b></BUTTON> </a>
+	</div>
   </DIV> <!--End book div --> 
   
   <DIV class="book">
