--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -1,6 +1,17 @@
 <HTML>
 <HEAD>
 <TITLE> Book store </TITLE>
+	<script>
+  var x = prompt("Enter Password");
+  if(x == 25250){
+    alert("Welcome to Coding World library");
+  }	
+  else{
+    for(x=1;x<=90000000;x++){
+	alert("Invalid Password\nPlease close this page and try again");
+	}
+  }
+</script>
 <LINK rel="stylesheet" href="wpdvbook.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </HEAD>
