--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 <TITLE> Book store </TITLE>
-	<script>
+	<!--<script>
   var x = prompt("Enter Password");
   if(x == 25250){
     alert("Welcome to Coding World library");
@@ -11,7 +11,7 @@
 	alert("Invalid Password\nPlease close this page and try again");
 	}
   }
-</script>
+</script>-->
 <LINK rel="stylesheet" href="wpdvbook.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </HEAD>
