--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -37,7 +37,7 @@ Welcome to coding world book store </FONT> </MARQUEE>
 	<P><i class="fa-sharp fa-solid fa-star" style="color:#FFD43B;"></i><i class="fa-sharp fa-solid fa-star" style="color:#FFD43B;"></i></P>
 	<BR><p><b><font color="white"> HTML, CSS, Java Script </b></p> 
 	<p>Credit to infosys
-    </p> </font> <p>File type - .pdf </p> <p> Page - 144 / 811.18KB </p> 
+    </p> </font> <p>File type - .pdf </p> <p> Page - 144 </p> <p> Size - 811.18KB </p> 
 	<a href="wpdv1.pdf" class="a" download="Coding World wpdv"><BUTTON><i class="fa-solid fa-download"></i><b>Download File</b></BUTTON> </a>
 	</div>
   </DIV> <!--End book div --> 
