--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -48,13 +48,13 @@ Welcome to coding world book store </FONT> </MARQUEE>
 	<p>Credit to infosys, 2025</p> </font></div>
   </DIV> <!--End book div --> 
   
-  <DIV class="book">
+  <!-- <DIV class="book">
 	<img src="cov1.png">	
 	<div> <p><b><font color="white"> HTML, CSS, Java Script </b></p> 
 	<p>Credit to infosys, 2025</p> </font></div>
   </DIV> <!--End book div --> 
   
-  <DIV class="book">
+  <!-- <DIV class="book">
 	<img src="cov1.png">	
 	<div> <p><b><font color="white"> HTML, CSS, Java Script </b></p> 
 	<p>Credit to infosys, 2025</p> </font></div>
