--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -18,6 +18,14 @@
 <BODY>
 <!-- ================================================================ Part of close option ====================================== -->
 <div class="main_close">
+
+ <div class="close1">
+    <Script>
+	 var x = prompt("Enter your name");
+	 document.write(" Welcome " + x); 
+	</Script>
+	<!-- <p><font size="5px" color="gray">e - book for Web Development</font></p> -->
+ </div> <!--End close div-->
  
  <div class="close">
 	<a href="index.html"><i class="fa-solid fa-xmark"></i></a>
