--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -20,11 +20,7 @@
 <div class="main_close">
 
  <div class="close1">
-    <Script>
-	 var x = prompt("Enter your name");
-	 document.write(" Welcome " + x); 
-	</Script>
-	<!-- <p><font size="5px" color="gray">e - book for Web Development</font></p> -->
+	<<p><font size="5px" color="gray">e - book for Web Development</font></p>
  </div> <!--End close div-->
  
  <div class="close">
