--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -20,7 +20,7 @@
 <div class="main_close">
 
  <div class="close1">
-	<<p><font size="5px" color="gray">e - book for Web Development</font></p>
+	<p><font size="5px" color="gray">e - book for Web Development</font></p>
  </div> <!--End close div-->
  
  <div class="close">
