--- a/wpdvbook.html
+++ b/wpdvbook.html
@@ -48,8 +48,13 @@ Welcome to coding world book store </FONT> </MARQUEE>
   
   <DIV class="book">
 	<img src="cov1.png">	
-	<div> <p><b><font color="white"> HTML, CSS, Java Script </b></p> 
-	<p>Credit to infosys, 2025</p> </font></div>
+	<div>
+	<P><i class="fa-sharp fa-solid fa-star" style="color:#FFD43B;"></i><i class="fa-sharp fa-solid fa-star" style="color:#FFD43B;"></i><i class="fa-sharp fa-solid fa-star" style="color:#FFD43B;"></i></P>
+	<BR><p><b><font color="white"> HTML, CSS, Java Script </b></p> 
+	<p>Credit to coding world</p> 
+	</font> <p>File type - .pdf </p> <p> Page -  </p> <p>Size -  </p> 
+	<a href="#" class="a" download="Coding World wpdv"><BUTTON><i class="fa-solid fa-download"></i><b>Download File</b></BUTTON> </a>
+	</div>
   </DIV> <!--End book div --> 
   
   <!-- <DIV class="book">
